--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -7,6 +7,6 @@
 <h2>Favorite Customers</h2>
 <ol>
   <% @top_five_customers.each do |customer| %>
-    <li><%= customer.full_name %> - <%= @merchant.transaction_count(customer.id) %> Purchases<br><br></li>
+    <li id="customer-<%= customer.id %>"><%= customer.full_name %> - <%= @merchant.transaction_count(customer.id) %> Purchases</li>
   <% end %>
 </ol>
