--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,3 +1,7 @@
+<h1> <%= @merchant.name %> </h1>
+
+<h2> Editing <%= @item.name %> </h2>
+
 <%= form_with url: merchant_item_path(@merchant, @item), method: :patch, local: true do |f|%>
   <%= f.label :name %><br>
   <%= f.text_field :name, value: @item.name %><br><br>
