--- a/app/views/admin/merchants/index.html.erb
+++ b/app/views/admin/merchants/index.html.erb
@@ -1,4 +1,5 @@
 <h1>All Merchants (Admin View)</h1>
+<p><%= link_to 'New Merchant', new_admin_merchant_path %></p>
 
 <section id='all-merchants'>
   <section id='enabled-merchants'>
