--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -1,6 +1,7 @@
 <h1>Invoice #<%= @invoice.id %></h1>
 <h3>Status: <%= @invoice.status %></h3>
 <h3>Created on: <%= @invoice.created_at_view_format %></h3>
+<h3>Total Revenue: $<%= '%.2f' % @invoice.total_revenue %></h3>
 
 <h2>Customer:</h2>
 <p><%= @invoice.customer_full_name %></p>
