--- a/app/views/admin/invoices/show.html.erb
+++ b/app/views/admin/invoices/show.html.erb
@@ -6,6 +6,14 @@
   <p>Total Revenue: <%= number_to_currency((@invoice.total_revenue[0])) %></p>
 </section>
 
+<section id='invoice_status_update'>
+  <%= form_with model: @invoice, url: admin_invoice_path, local: true do |form| %>
+    <%= form.label :status %>
+    <%= form.select :status, @invoice_statuses %>
+    <%= form.submit %>
+  <% end %>
+</section>
+
 <h3>Customer Information:</h3>
 <section class='admin_invoice' id='customer_info'>
   <p><%= @customer.full_name %></p>
