--- a/app/views/admin/invoices/index.html.erb
+++ b/app/views/admin/invoices/index.html.erb
@@ -2,7 +2,9 @@
 
 <section id='all-invoices'>
   <% @invoices.each do |invoice| %>
-    <%= link_to(invoice.id, admin_invoice_path(invoice.id)) %>
+    <section id='invoice-<%= invoice.id %>'>
+      <%= link_to(invoice.id, admin_invoice_path(invoice.id)) %>
+    </section>
     <br>
   <% end %>
 </section>
