Add status to index view page

--- a/app/views/admin/invoices/index.html.erb
+++ b/app/views/admin/invoices/index.html.erb
@@ -3,7 +3,7 @@
 <section id='all-invoices'>
   <% @invoices.each do |invoice| %>
     <section id='invoice-<%= invoice.id %>'>
-      <%= link_to(invoice.id, admin_invoice_path(invoice.id)) %>
+      <%= link_to(invoice.id, admin_invoice_path(invoice.id)) %> <%= invoice.status_view_format %>
     </section>
     <br>
   <% end %>
