--- a/app/views/admin/invoices/index.html.erb
+++ b/app/views/admin/invoices/index.html.erb
@@ -5,12 +5,11 @@
 <%= submit_tag "Update Invoices" %>
   <% @invoices.each do |invoice| %>
     <section id='invoice-<%= invoice.id %>'>
-      <%= link_to(invoice.id, admin_invoice_path(invoice.id)) %> <%= invoice.status_view_format %>
-      <br>
+      <p>Invoice #<%= link_to(invoice.id, admin_invoice_path(invoice.id)) %> Status: <%= invoice.status_view_format %> -
       <%= fields_for "invoices[]", invoice do |f| %>
       <%= f.label :status %>
       <%= f.select :status, Invoice.statuses.keys %>
-      <% end %>
+      <% end %></p>
     </section>
   <% end %>
 <% end %>
