--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
   </head>
 
   <body>
+    <%= link_to "All Merchant Dashboards", merchants_path %>
+    <%= link_to "Admin Dashboard", admin_index_path %>
     <% flash.each do |type, message| %>
       <p class='flash-message'><%= message %></p>
     <% end %>
