--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,13 +1,5 @@
-<h1> <%= @merchant.name %> </h1>
-
-<h2> Editing <%= @item.name %> </h2>
-
-<%= form_with url: merchant_item_path(@merchant, @item), method: :patch, local: true do |f|%>
-  <%= f.label :name %><br>
-  <%= f.text_field :name, value: @item.name %><br><br>
-  <%= f.label :description %><br>
-  <%= f.text_area :description, value: @item.description, maxlength: 500, rows: 8, cols: 60 %><br><br>
-  <%= f.label :selling_price %><br>
-  <%= f.number_field :unit_price, min: 0, step: 0.01, value: @item.unit_price %><br><br>
-  <%= f.submit "Update" %><br>
-<% end %>
+<%= render partial: 'form', locals: { header_2: "Editing #{@item.name}",
+                                      path: merchant_item_path(@merchant, @item),
+                                      method: :patch,
+                                      button_text: "Update"
+                                    } %>
