--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,13 @@
   </head>
 
   <body>
+    <h2><%= @repo %></h2>
+    Contributors: <br>
+    <% @contributors.each do |cont| %>
+      * <%= cont.user_name %> - <%= ApiService.commit_objects(cont.user_name) %> Commits<br>
+    <% end %>
+    Pull Requests: <%= @pulls %>
+
     <% flash.each do |type, message| %>
       <p class='flash-message'><%= message %></p>
     <% end %>
