--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -26,5 +26,7 @@
 
 <h3>Top Five Items</h3>
 <% @top_five_items.each do |item| %>
-  <%= link_to "#{item.name}", merchant_item_path(@merchant, item) %> $<%= '%.2f' % item.total_revenue %><br> Top Day For <%= item.name %> Was: <%= item.best_day %><br><br>
+  <div id="top-five-item-<%= item.id %>">
+    <%= link_to "#{item.name}", merchant_item_path(@merchant, item) %> $<%= '%.2f' % item.total_revenue %><br> Top Day For <%= item.name %> Was: <%= item.best_day %><br><br>
+  </div>
 <% end %>
