--- a/app/views/admin/invoices/show.html.erb
+++ b/app/views/admin/invoices/show.html.erb
@@ -3,7 +3,8 @@
 <section id='invoice_info'>
   <p>Status: <%= @invoice.status_view_format %></p>
   <p>Date Created: <%= @invoice.created_at_view_format %></p>
-  <p>Total Revenue: <%= number_to_currency((@invoice.total_revenue[0])) %></p>
+  <p>Total Revenue: <%= number_to_currency((@invoice.total_revenue)) %></p>
+  <p>Total Revenue After Discounts: <%= number_to_currency((@invoice.discount_revenue)) %></p>
 </section>
 
 <section id='invoice_status_update'>
@@ -23,7 +24,8 @@
   <% @items.each do |item| %>
     <h4><%= item.name %></h4>
     <p>Quantity: <%= InvoiceItem.search_for_quantity(@invoice.id, item.id) %></p>
-    <p>Price: <%= item.unit_price %></p>
-    <p>Status: <%= item.status %></p>
+    <p>Price: <%= number_to_currency(item.unit_price) %></p>
+    <p>Discount: <%= number_to_currency(@invoice.discount_amount(item.invoice_item(@invoice.id))) %></p>
+    <p>Status: <%= item.status.capitalize %></p>
   <% end %>
 </section>
