--- a/app/views/discounts/index.html.erb
+++ b/app/views/discounts/index.html.erb
@@ -9,8 +9,10 @@
     ID: <%= discount.id %><br>
     Percentage Discount: <%= discount.percent * 100 %>%<br>
     Quantity Threshold: <%= discount.threshold %> Items<br>
-    <%= link_to "Link To Discount's Show Page", merchant_discount_path(@merchant, discount) %><br>
-    <%= button_to "Delete Discount", merchant_discount_path(@merchant, discount), method: :delete %><br><br>
+    <%= link_to "Link To Discount's Show Page", merchant_discount_path(@merchant, discount) %><br><br>
+    <% if discount.no_invoice_items_pending? %>
+      <%= button_to "Delete Discount", merchant_discount_path(@merchant, discount), method: :delete %><br><br>
+    <% end %>
   </section>
 <% end %>
 
