--- a/app/views/discounts/new.html.erb
+++ b/app/views/discounts/new.html.erb
@@ -4,6 +4,6 @@
   <%= f.label :percent %>
   <%= f.number_field :percent, min: 0, step: 0.01, max: 1 %><br><br>
   <%= f.label :threshold %>
-  <%= f.number_field :threshold %><br><br>
+  <%= f.number_field :threshold, min: 1 %><br><br>
   <%= f.submit 'Create Discount' %>
 <% end %>
