--- a/app/views/discounts/index.html.erb
+++ b/app/views/discounts/index.html.erb
@@ -13,10 +13,8 @@
     ID: <%= discount.id %><br>
     Percentage Discount: <%= discount.percent * 100 %>%<br>
     Quantity Threshold: <%= discount.threshold %> Items<br>
-    <%= link_to "Link To Discount's Show Page", merchant_discount_path(@merchant, discount) %><br><br>
-    <% if discount.no_invoice_items_pending? %>
-      <%= button_to "Delete Discount", merchant_discount_path(@merchant, discount), method: :delete %><br><br>
-    <% end %>
+    <%= link_to "Link To Discount's Show Page", merchant_discount_path(@merchant, discount) %><br>
+    <%= render partial: discount.invoice_items_pending?, locals: {discount: discount } %><br><br>
   </section>
 <% end %>
 
