--- a/app/views/discounts/show.html.erb
+++ b/app/views/discounts/show.html.erb
@@ -2,6 +2,5 @@
 <h2>Discount Percentage: <%= @discount.percent * 100 %>%</h2>
 <h2>Item Quantity Threshold: <%= @discount.threshold %> Items</h2>
 
-<% if @discount.no_invoice_items_pending? %>
-  <%= button_to "Edit Discount", edit_merchant_discount_path(@merchant, @discount), method: :get %>
-<% end %>
+
+<%= render partial: @discount.invoice_items_pending?, locals: {discount: @discount } %>
