--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -14,9 +14,7 @@
       <p>Quantity: <%= invoice_item.quantity %></p>
       <p>Sold For: <%= number_to_currency(invoice_item.unit_price) %></p>
       <p>Discount: <%= number_to_currency(@invoice.discount_amount(invoice_item.id)) %></p>
-      <% if @invoice.discount_amount(invoice_item.id) != 0 %>
-        <%= link_to "Discount ##{@invoice.discount_id(invoice_item.id)}", merchant_discount_path(@merchant, @invoice.discount_id(invoice_item.id)) %>
-      <% end %>
+      <%= render partial: @invoice.gets_discount?(invoice_item.id), locals: {invoice_item: invoice_item} %>
       <p>Status: <%= invoice_item.status_view_format %></p>
 
       <%= form_with url: merchant_invoice_item_path(@merchant, invoice_item), method: :patch, params: { status: :status }, local: true do |f|%>
